Changes according to mp+255771@code.launchpad.net

--- a/config.yaml
+++ b/config.yaml
@@ -237,10 +237,6 @@ options:
       SSL CA to use with the certificate and key provided - this is only
       required if you are providing a privately signed ssl_cert and ssl_key.
   # Neutron Nuage plugin (VSD) configuration
-  vsp-packages:
-    type: string
-    default: "python-nuagenetlib"
-    description: List of packages to install for neutron-plugin-nuage VSP.
   vsd-server:
     type: string
     default:
@@ -252,7 +248,7 @@ options:
   vsd-organization:
     type: string
     default: csp
-    description: Name of the organization to create in Nuage VSD
+    description: Name of the organization in Nuage VSD
   vsd-auth-ssl:
     type: string
     default: "True"
@@ -260,19 +256,15 @@ options:
   vsd-base-uri:
     type: string
     default: "/nuage/api/v3_0"
-    description: Name of the organization to create in Nuage VSD
+    description: Nuage VSD API endpoint URI
   vsd-auth-resource:
     type: string
     default: "/me"
-    description: Name of the organization to create in Nuage VSD
+    description: Nuage VSD authentication resource
   vsd-netpart-name:
     type: string
     default: juju-enterprise
-    description: Name of the organization to create in Nuage VSD
-  vsd-config-file:
-    type: string
-    default: "/etc/neutron/plugins/nuage/nuage_plugin.ini"
-    description: VSD configuration file name.
+    description: Name of the Organization or Enterprise to create in Nuage VSD
   # end of Nuage VSD configuration
   l2-population:
     type: boolean
