--- a/charm-helpers-hooks.yaml
+++ b/charm-helpers-hooks.yaml
@@ -8,6 +8,7 @@ include:
     - contrib.network.ovs
     - contrib.storage.linux
     - payload.execd
+    - payload.archive
     - contrib.network.ip
     - contrib.python.packages
     - contrib.charmsupport
