--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -4,8 +4,8 @@
 # Configuration file maintained by Juju. Local changes may be overwritten.  
 ###############################################################################
 [ml2]
-type_drivers = gre,vxlan,vlan,flat
-tenant_network_types = gre,vxlan,vlan,flat
+type_drivers = {{ overlay_network_type }},vlan,flat
+tenant_network_types = {{ overlay_network_type }},vlan,flat
 mechanism_drivers = openvswitch,hyperv,l2population
 
 [ml2_type_gre]
