--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -27,8 +27,12 @@ bind_port = 9696
 
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
+{% if service_plugins -%}
+service_plugins = {{ service_plugins }}
+{% else -%}
 {% if neutron_plugin in ['ovs', 'ml2'] -%}
 service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin,neutron.services.loadbalancer.plugin.LoadBalancerPlugin,neutron.services.vpn.plugin.VPNDriverPlugin,neutron.services.metering.metering_plugin.MeteringPlugin
+{% endif -%}
 {% endif -%}
 {% endif -%}
 
