--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -29,10 +29,15 @@ bind_port = {{ neutron_bind_port }}
 bind_port = 9696
 {% endif -%}
 
+# {{ service_plugins }}
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
+{% if service_plugins -%}
+service_plugins = {{ service_plugins }}
+{% else -%}
 {% if neutron_plugin in ['ovs', 'ml2'] -%}
 service_plugins = router,firewall,lbaas,vpnaas,metering
+{% endif -%}
 {% endif -%}
 {% endif -%}
 
