Add support for config for neutron-server coming from subordinate

--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -59,6 +59,12 @@ nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 
 {% include "section-zeromq" %}
 
+{% if sections and 'DEFAULT' in sections -%}
+{% for key, value in sections['DEFAULT'] -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif %}
+
 [quotas]
 quota_driver = neutron.db.quota_db.DbQuotaDriver
 {% if neutron_security_groups -%}
@@ -77,6 +83,11 @@ quota_member = {{ quota_member }}
 quota_health_monitors = {{ quota_health_monitors }}
 quota_router = {{ quota_router }}
 quota_floatingip = {{ quota_floatingip }}
+{% if sections and 'quotas' in sections -%}
+{% for key, value in sections['quotas'] -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif %}
 
 [agent]
 root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
@@ -86,11 +97,26 @@ root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 {% include "parts/section-database" %}
 
 {% include "section-rabbitmq-oslo" %}
+{% if sections and 'agent' in sections -%}
+{% for key, value in sections['agent'] -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif %}
 
 [service_providers]
 service_provider=LOADBALANCER:Haproxy:neutron_lbaas.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
 service_provider=VPN:openswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
 service_provider=FIREWALL:Iptables:neutron_fwaas.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
+{% if sections and 'service_providers' in sections -%}
+{% for key, value in sections['service_providers'] -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif %}
 
 [oslo_concurrency]
 lock_path = $state_path/lock
+{% if sections and 'oslo_concurrency' in sections -%}
+{% for key, value in sections['oslo_concurrency'] -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif %}
