Update Juno/Kilo template files for Calico

--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -31,14 +31,22 @@ bind_port = 9696
 
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
-{% if neutron_plugin in ['ovs', 'ml2'] -%}
+{% if neutron_plugin in ['ovs', 'ml2', 'Calico'] -%}
 service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin,neutron.services.loadbalancer.plugin.LoadBalancerPlugin,neutron.services.vpn.plugin.VPNDriverPlugin,neutron.services.metering.metering_plugin.MeteringPlugin
 {% endif -%}
 {% endif -%}
 
 {% if neutron_security_groups -%}
 allow_overlapping_ips = True
+{% if neutron_plugin == 'Calico' -%}
+neutron_firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
+{% else -%}
 neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
+{% endif -%}
+{% endif -%}
+
+{% if neutron_plugin == 'Calico' -%}
+dhcp_agents_per_network = 1000
 {% endif -%}
 
 {% include "parts/rabbitmq" %}
