--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -31,14 +31,22 @@ bind_port = 9696
 
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
-{% if neutron_plugin in ['ovs', 'ml2'] -%}
+{% if neutron_plugin in ['ovs', 'ml2', 'Calico'] -%}
 service_plugins = router,firewall,lbaas,vpnaas,metering
 {% endif -%}
 {% endif -%}
 
 {% if neutron_security_groups -%}
 allow_overlapping_ips = True
+{% if neutron_plugin == 'Calico' -%}
+neutron_firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
+{% else -%}
 neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
+{% endif -%}
+{% endif -%}
+
+{% if neutron_plugin == 'Calico' -%}
+dhcp_agents_per_network = 1000
 {% endif -%}
 
 notify_nova_on_port_status_changes = True
