[trivial] Cleanup config.yaml
Partially-Closes-Bug: 1473426

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,17 @@
 options:
+  debug:
+    default: False
+    type: boolean
+    description: Enable debug logging.
+  verbose:
+    default: False
+    type: boolean
+    description: Enable verbose logging.
+  use-syslog:
+    type: boolean
+    default: False
+    description: |
+      Setting this to True will allow supporting services to log to syslog.
   openstack-origin:
     default: distro
     type: string
@@ -7,17 +20,27 @@ options:
       distro (default), ppa:somecustom/ppa, a deb url sources entry,
       or a supported Cloud Archive release pocket.
 
-      Supported Cloud Archive sources include: cloud:precise-folsom,
-      cloud:precise-folsom/updates, cloud:precise-folsom/staging,
-      cloud:precise-folsom/proposed.
+      Supported Cloud Archive sources include:
 
-      Note that updating this setting to a source that is known to
-      provide a later version of OpenStack will trigger a software
-      upgrade.
+      cloud:<series>-<openstack-release>
+      cloud:<series>-<openstack-release>/updates
+      cloud:<series>-<openstack-release>/staging
+      cloud:<series>-<openstack-release>/proposed
 
-      Note that when openstack-origin-git is specified, openstack
-      specific packages will be installed from source rather than
-      from the openstack-origin repository.
+      For series=Precise we support cloud archives for openstack-release:
+         * icehouse
+
+      For series=Trusty we support cloud archives for openstack-release:
+         * juno
+         * kilo
+         * ...
+
+      NOTE: updating this setting to a source that is known to provide
+      a later version of OpenStack will trigger a software upgrade.
+
+      NOTE: when openstack-origin-git is specified, openstack specific
+      packages will be installed from source rather than from the
+      openstack-origin repository.
   openstack-origin-git:
     default:
     type: string
@@ -46,11 +69,6 @@ options:
     default: neutron
     type: string
     description: Database name for Neutron (if enabled)
-  use-syslog:
-    type: boolean
-    default: False
-    description: |
-      If set to True, supporting services will log to syslog.
   region:
     default: RegionOne
     type: string
@@ -63,7 +81,9 @@ options:
   neutron-external-network:
     type: string
     default: ext_net
-    description: Name of the external network for floating IP addresses provided by Neutron.
+    description: |
+      Name of the external network for floating IP addresses provided by
+      Neutron.
   network-device-mtu:
     type: int
     default:
@@ -145,10 +165,10 @@ options:
     default: -1
     type: int
     description: |
-      Number of pool members allowed per tenant. A negative value means unlimited.
-      The default is unlimited because a member is not a real resource consumer
-      on Openstack. However, on back-end, a member is a resource consumer
-      and that is the reason why quota is possible.
+      Number of pool members allowed per tenant. A negative value means
+      unlimited. The default is unlimited because a member is not a real
+      resource consumer on Openstack. However, on back-end, a member is a
+      resource consumer and that is the reason why quota is possible.
   quota-health-monitors:
     default: -1
     type: int
@@ -156,8 +176,8 @@ options:
       Number of health monitors allowed per tenant. A negative value means
       unlimited.
       The default is unlimited because a health monitor is not a real resource
-      consumer on Openstack. However, on back-end, a member is a resource consumer
-      and that is the reason why quota is possible.
+      consumer on Openstack. However, on back-end, a member is a resource
+      consumer and that is the reason why quota is possible.
   quota-router:
     default: 10
     type: int
@@ -167,7 +187,8 @@ options:
     default: 50
     type: int
     description: |
-      Number of floating IPs allowed per tenant. A negative value means unlimited.
+      Number of floating IPs allowed per tenant. A negative value means
+      unlimited.
   # HA configuration settings
   vip:
     type: string
@@ -181,8 +202,8 @@ options:
     type: string
     default: eth0
     description: |
-      Default network interface to use for HA vip when it cannot be automatically
-      determined.
+      Default network interface to use for HA vip when it cannot be
+      automatically determined.
   vip_cidr:
     type: int
     default: 24
@@ -201,14 +222,6 @@ options:
     description: |
        Default multicast port number that will be used to communicate between
        HA Cluster nodes.
-  debug:
-    default: False
-    type: boolean
-    description: Enable debug logging
-  verbose:
-    default: False
-    type: boolean
-    description: Enable verbose logging
   # Network configuration options
   # by default all access is over 'private-address'
   os-admin-network:
