--- a/config.yaml
+++ b/config.yaml
@@ -360,4 +360,4 @@ options:
     default: True
     description: |
       If True neutron-server will install neutron packages for the plugin
-      stipulated.
+      configured.
