Changes for PLUMgrid neutron plugin

--- a/config.yaml
+++ b/config.yaml
@@ -368,6 +368,20 @@ options:
     description: |
       A comma-separated list of nagios servicegroups.
       If left empty, the nagios_context will be used as the servicegroup
+  #PLUMgrid Plugin configuration
+  plumgrid-username:
+    default: plumgrid
+    type: string
+    description: Username
+  plumgrid-password:
+    default: plumgrid
+    type: string
+    description: Password
+  plumgrid-virtual-ip:
+    default:
+    type: string
+    description: Virtual IP to access PG Console
+  # end of PLUMgrid configuration
   manage-neutron-plugin-legacy-mode:
     type: boolean
     default: True
