--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -8,8 +8,8 @@
 type_drivers = local,flat
 mechanism_drivers = calico
 {% else -%}
-type_drivers = {{ overlay_network_type }},vlan,flat
-tenant_network_types = {{ overlay_network_type }},vlan,flat
+type_drivers = {{ overlay_network_type }},vlan,flat,local
+tenant_network_types = {{ overlay_network_type }},vlan,flat,local
 mechanism_drivers = openvswitch,hyperv,l2population
 
 [ml2_type_gre]
