--- a/config.yaml
+++ b/config.yaml
@@ -398,3 +398,13 @@ options:
       a PPA URL, of the form ppa:somecustom/ppa. Changing this value
       after installation will force an immediate software upgrade.
   # End of Calico plugin configuration
+  action-managed-upgrade:
+    type: boolean
+    default: False
+    description: |
+      If True enables openstack upgrades for this charm via juju actions.
+      You will still need to set openstack-origin to the new repository but
+      instead of an upgrade running automatically across all units, it will
+      wait for you to execute the openstack-upgrade action for this charm on
+      each unit. If False it will revert to existing behavior of upgrading
+      all units on config change.
