Support quota-driver attribute in neutron-plugin-api-subordinate relation

--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -69,7 +69,11 @@ nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 {% endif %}
 
 [quotas]
+{% if quota_driver -%}
+quota_driver = {{ quota_driver }}
+{% else -%}
 quota_driver = neutron.db.quota_db.DbQuotaDriver
+{% endif -%}
 {% if neutron_security_groups -%}
 quota_items = network,subnet,port,security_group,security_group_rule
 {% endif -%}
