--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -4,6 +4,10 @@
 # Configuration file maintained by Juju. Local changes may be overwritten.  
 ###############################################################################
 [ml2]
+{% if enable_ml2_port_security == 'True' -%}
+extension_drivers=port_security
+{% endif -%}
+
 {% if neutron_plugin == 'Calico' -%}
 type_drivers = local,flat
 mechanism_drivers = calico
