--- a/templates/icehouse/ml2_conf.ini
+++ b/templates/icehouse/ml2_conf.ini
@@ -4,7 +4,7 @@
 # Configuration file maintained by Juju. Local changes may be overwritten.  
 ###############################################################################
 [ml2]
-{% if enable_ml2_port_security == 'True' -%}
+{% if enable_ml2_port_security -%}
 extension_drivers=port_security
 {% endif -%}
 
