--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -47,6 +47,8 @@ neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptable
 
 {% if neutron_plugin == 'Calico' -%}
 dhcp_agents_per_network = 1000
+{% else -%}
+dhcp_agents_per_network = {{ dhcp_agents_per_network }}
 {% endif -%}
 
 {% include "parts/rabbitmq" %}
@@ -82,7 +84,7 @@ quota_security_group_rule = {{ quota_security_group_rule }}
 quota_items = network,subnet,port
 {% endif -%}
 quota_network = {{ quota_network }}
-quota_subnet = {{ quota_subnet }} 
+quota_subnet = {{ quota_subnet }}
 quota_port = {{ quota_port }}
 quota_vip = {{ quota_vip }}
 quota_pool = {{ quota_pool }}
