--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -47,6 +47,8 @@ neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptable
 
 {% if neutron_plugin == 'Calico' -%}
 dhcp_agents_per_network = 1000
+{% else -%}
+dhcp_agents_per_network = {{ dhcp_agents_per_network }}
 {% endif -%}
 
 {% include "parts/rabbitmq" %}
