--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -51,6 +51,8 @@ neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptable
 
 {% if neutron_plugin == 'Calico' -%}
 dhcp_agents_per_network = 1000
+{% else -%}
+dhcp_agents_per_network = {{ dhcp_agents_per_network }}
 {% endif -%}
 
 notify_nova_on_port_status_changes = True
