--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -1,4 +1,4 @@
-# liberty
+# mitaka
 ###############################################################################
 # [ WARNING ]
 # Configuration file maintained by Juju. Local changes may be overwritten.
