--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -102,4 +102,6 @@ admin_password = {{ admin_password }}
 [service_providers]
 service_provider=LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
 service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
+{% if not neutron_plugin or neutron_plugin != 'midonet' -%}
 service_provider=FIREWALL:Iptables:neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
+{% endif -%}
