--- a/templates/liberty/neutron.conf
+++ b/templates/liberty/neutron.conf
@@ -36,6 +36,8 @@ service_plugins = {{ service_plugins }}
 {% else -%}
 {% if neutron_plugin in ['ovs', 'ml2', 'Calico'] -%}
 service_plugins = router,firewall,lbaas,vpnaas,metering
+{% elif neutron_plugin == 'midonet' -%}
+service_plugins = lbaas
 {% endif -%}
 {% endif -%}
 {% endif -%}
@@ -44,7 +46,7 @@ service_plugins = router,firewall,lbaas,vpnaas,metering
 allow_overlapping_ips = True
 {% if neutron_plugin == 'Calico' -%}
 neutron_firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
-{% else -%}
+{% elif neutron_plugin != 'midonet' -%}
 neutron_firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
 {% endif -%}
 {% endif -%}
