--- a/templates/liberty/neutron_lbaas.conf
+++ b/templates/liberty/neutron_lbaas.conf
@@ -15,5 +15,9 @@
 # auth_version = 2
 
 [service_providers]
+{% if neutron_plugin and neutron_plugin == 'midonet' -%}
+service_provider = LOADBALANCER:Midonet:midonet.neutron.services.loadbalancer.driver.MidonetLoadbalancerDriver:default
+{% else -%}
 service_provider=LOADBALANCER:Haproxy:neutron_lbaas.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
 # service_provider=LOADBALANCERV2:Haproxy:neutron_lbaas.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
+{% endif %}
