--- a/templates/liberty/neutron.conf
+++ b/templates/liberty/neutron.conf
@@ -29,6 +29,10 @@ bind_port = {{ neutron_bind_port }}
 bind_port = 9696
 {% endif -%}
 
+{% if api_extensions_path -%}
+api_extensions_path = {{ api_extensions_path }}
+{% endif -%}
+
 {% if core_plugin -%}
 core_plugin = {{ core_plugin }}
 {% if service_plugins -%}
@@ -67,6 +71,7 @@ nova_admin_tenant_id = {{ admin_tenant_id }}
 nova_admin_password = {{ admin_password }}
 nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 {% endif -%}
+
 
 {% if sections and 'DEFAULT' in sections -%}
 {% for key, value in sections['DEFAULT'] -%}
