--- a/config.yaml
+++ b/config.yaml
@@ -284,10 +284,16 @@ options:
   nuage-packages:
     type: string
     default: "nuage-openstack-neutron nuagenetlib"
-    description: Its [nuage-openstack-neutron nuagenetlib] for Nuage VSP >=3.2R4  and [nuage-neutron python-nuagenetlib] of Nuage VSP <=3.2R3
+    description: |
+      Its [nuage-openstack-neutron nuagenetlib] for Nuage VSP >=3.2R4 & KILO
+      and [nuage-neutron python-nuagenetlib] of Nuage VSP <=3.0 & JUNO
   vsd-cms-name:
     type: string
-    description: Please give Maas env id so that it is unique per openstack env.
+    description: |
+      This is required only for 3.2 R4 and above releases of Nuage and Kilo.
+      Please give Maas env id so that it is unique per openstack cluster.
+      This name is used to create th CMS ID on Nuage-VSD which should be unique per OSP cluster.
+      Your Deployment will fail if this config is not provided.
   vsd-server:
     type: string
     default:
