Switch tenant_id to project_name to fixup mitaka b2 compat

--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -71,8 +71,8 @@ region_name = {{ region }}
 auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 username = {{ admin_user }}
 password = {{ admin_password }}
-tenant_id = {{ admin_tenant_id }}
-{% endif -%}
+project_name = {{ admin_tenant_name }}
+{% endif %}
 
 [quotas]
 {% if quota_driver -%}
