--- a/config.yaml
+++ b/config.yaml
@@ -102,6 +102,7 @@ options:
         nsx - VMWare NSX
         Calico - Project Calico Networking
         midonet - MidoNet
+        plumgrid - PLUMgrid
       .
   overlay-network-type:
     default: gre
