--- a/config.yaml
+++ b/config.yaml
@@ -127,6 +127,11 @@ options:
       <physical_network> specifying physical_network names usable for VLAN
       provider and tenant networks, as well as ranges of VLAN tags on each
       available for allocation to tenant networks.
+  vni-ranges:
+    type: string
+    default: "1001:2000"
+    description: |
+      Space-delimited list of <vxlan_min>:<vxlan_max> for VXLAN provider.
   # Quota configuration settings
   quota-security-group:
     default: 10
