--- a/templates/kilo/ml2_conf.ini
+++ b/templates/kilo/ml2_conf.ini
@@ -20,7 +20,7 @@ mechanism_drivers = openvswitch,l2population
 tunnel_id_ranges = 1:1000
 
 [ml2_type_vxlan]
-vni_ranges = 1001:2000
+vni_ranges = {{ vni_ranges }}
 
 [ml2_type_vlan]
 network_vlan_ranges = {{ vlan_ranges }}
