Enable Keystone v3 Support in template
The neutron.conf template has been updated to support the keystone v3 endpoint

Change-Id: Ic7676ebc67f9bd032dc6caaa5ad2f8cf5e383e87
Partial-Bug: 1522397

--- a/templates/liberty/neutron.conf
+++ b/templates/liberty/neutron.conf
@@ -60,15 +60,9 @@ dhcp_agents_per_network = {{ dhcp_agents_per_network }}
 
 notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
-nova_url = {{ nova_url }}
-nova_region_name = {{ region }}
-{% if auth_host -%}
-nova_admin_username = {{ admin_user }}
-nova_admin_tenant_id = {{ admin_tenant_id }}
-nova_admin_password = {{ admin_password }}
-nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
-{% endif -%}
 
+[nova]
+auth_section = keystone_authtoken
 
 {% if sections and 'DEFAULT' in sections -%}
 {% for key, value in sections['DEFAULT'] -%}
