--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -65,14 +65,7 @@ notify_nova_on_port_data_changes = True
 {% include "section-zeromq" %}
 
 [nova]
-auth_plugin = password
-region_name = {{ region }}
-{% if auth_host -%}
-auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
-username = {{ admin_user }}
-password = {{ admin_password }}
-project_name = {{ admin_tenant_name }}
-{% endif %}
+auth_section = keystone_authtoken
 
 [quotas]
 {% if quota_driver -%}
