--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,6 +14,10 @@ description: |
   This charm provides the OpenStack Neutron API service.
 tags:
   - openstack
+extra-bindings:
+  public:
+  admin:
+  internal:
 provides:
   nrpe-external-master:
     interface: nrpe-external-master
