--- a/config.yaml
+++ b/config.yaml
@@ -530,3 +530,9 @@ options:
     description: |
       The Midokura Enterprise MidoNet password credentials to access the
       repository.
+  harden:
+    default:
+    type: string
+    description: |
+      Apply system hardening. Supports a space-delimited list of modules
+      to run. Supported modules currently include os, ssh, apache and mysql.
