--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -105,3 +105,5 @@ service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVP
 {% if not neutron_plugin or neutron_plugin != 'midonet' -%}
 service_provider=FIREWALL:Iptables:neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
 {% endif -%}
+
+{% include "parts/section-nova" %}
