--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -117,3 +117,5 @@ service_provider=FIREWALL:Iptables:neutron_fwaas.agent.linux.iptables_firewall.O
 
 [oslo_concurrency]
 lock_path = $state_path/lock
+
+{% include "parts/section-nova" %}
