--- a/templates/liberty/neutron.conf
+++ b/templates/liberty/neutron.conf
@@ -61,9 +61,6 @@ dhcp_agents_per_network = {{ dhcp_agents_per_network }}
 notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 
-[nova]
-auth_section = keystone_authtoken
-
 {% if sections and 'DEFAULT' in sections -%}
 {% for key, value in sections['DEFAULT'] -%}
 {{ key }} = {{ value }}
@@ -106,3 +103,5 @@ root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 
 [oslo_concurrency]
 lock_path = $state_path/lock
+
+{% include "parts/section-nova" %}
