--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -64,9 +64,6 @@ notify_nova_on_port_data_changes = True
 
 {% include "section-zeromq" %}
 
-[nova]
-auth_section = keystone_authtoken
-
 [quotas]
 {% if quota_driver -%}
 quota_driver = {{ quota_driver }}
@@ -101,3 +98,5 @@ root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 
 [oslo_concurrency]
 lock_path = $state_path/lock
+
+{% include "parts/section-nova" %}
