--- a/templates/icehouse/neutron.conf
+++ b/templates/icehouse/neutron.conf
@@ -116,3 +116,5 @@ admin_password = {{ admin_password }}
 service_provider=LOADBALANCER:Haproxy:neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver:default
 service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
 service_provider=FIREWALL:Iptables:neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver:default
+
+{% include "parts/section-nova" %}
