Sync correct charm-helpers branch
Revert accidential commit that made use of an obsolete
feature branch for charm-helpers.

Change-Id: I7e50cfa2e2b836a087d48c93ab146d5532b11793

--- a/charm-helpers-hooks.yaml
+++ b/charm-helpers-hooks.yaml
@@ -1,4 +1,4 @@
-branch: lp:~james-page/charm-helpers/network-spaces-api-endpoints
+branch: lp:charm-helpers
 destination: hooks/charmhelpers
 include:
     - core
