--- a/templates/kilo/nuage_plugin.ini
+++ b/templates/kilo/nuage_plugin.ini
@@ -10,4 +10,4 @@ organization  = {{ vsd_organization }}
 serverssl     = {{ vsd_auth_ssl }}
 base_uri      = {{ vsd_base_uri }}
 default_net_partition_name = {{ vsd_netpart_name }}
-cms_id = {{ cms_id }}
+cms_id = {{ vsd_cms_id }}
