Add SR-IOV device support
Add a new configuration option to enable SR-IOV support across Neutron and
Nova; this involves enabling the required mechanism driver, and informing
the nova-cloud-controller charm that SR-IOV has been enabled, so that Nova
can use the correct scheduler filters for PCI device management.

Change-Id: I8938c22c8f4dc27bb0816fd8e5e6154a1407e93f

--- a/templates/kilo/ml2_conf.ini
+++ b/templates/kilo/ml2_conf.ini
@@ -14,7 +14,11 @@ mechanism_drivers = calico
 {% else -%}
 type_drivers = {{ overlay_network_type }},vlan,flat,local
 tenant_network_types = {{ overlay_network_type }},vlan,flat,local
+{% if enable_sriov %}
+mechanism_drivers = openvswitch,l2population,sriovnicswitch
+{% else %}
 mechanism_drivers = openvswitch,l2population
+{% endif %}
 
 [ml2_type_gre]
 tunnel_id_ranges = 1:1000
