--- a/config.yaml
+++ b/config.yaml
@@ -45,14 +45,39 @@ options:
     default:
     type: string
     description: |
-      Specifies a YAML-formatted dictionary listing the git
-      repositories and branches from which to install OpenStack and
-      its dependencies.
+      Specifies a default OpenStack release name, or a YAML dictionary
+      listing the git repositories to install from.
+
+      The default Openstack release name may be one of the following, where
+      the corresponding OpenStack github branch will be used:
+        * icehouse
+        * kilo
+        * liberty
+        * mitaka
+        * master
+
+      The YAML must minimally include requirements, neutron-fwaas,
+      neutron-lbaas, neutron-vpnaas, and neutron repositories, and may
+      also include repositories for other dependencies:
+        repositories:
+        - {name: requirements,
+           repository: 'git://github.com/openstack/requirements',
+           branch: master}
+        - {name: neutron-fwaas,
+           repository: 'git://github.com/openstack/neutron-fwaas',
+           branch: master}
+        - {name: neutron-lbaas,
+           repository: 'git://github.com/openstack/neutron-lbaas',
+           branch: master}
+        - {name: neutron-vpnaas,
+           repository: 'git://github.com/openstack/neutron-vpnaas',
+           branch: master}
+        - {name: neutron,
+           repository: 'git://github.com/openstack/neutron',
+           branch: master}
 
       Note that the installed config files will be determined based on
       the OpenStack release of the openstack-origin option.
-
-      For more details see README.md.
   rabbit-user:
     default: neutron
     type: string
