--- a/templates/kilo/ml2_conf.ini
+++ b/templates/kilo/ml2_conf.ini
@@ -16,6 +16,8 @@ type_drivers = {{ overlay_network_type }},vlan,flat,local
 tenant_network_types = {{ overlay_network_type }},vlan,flat,local
 {% if enable_sriov %}
 mechanism_drivers = openvswitch,l2population,sriovnicswitch
+{% elif enable_hyperv %}
+mechanism_drivers = openvswitch,hyperv,l2population
 {% else %}
 mechanism_drivers = openvswitch,l2population
 {% endif %}
