Various deploy from source changes and c-h sync
* openstack-origin is no longer required when using openstack-origin-git.
* Drop kilo from openstack-origin-git default values because upper
  constraints doesn't work in kilo for openstack-dashboard and glance.
* Add flag to allow for disabling upper constraints when using
  openstack-origin-git with user-specified git repositories.

Change-Id: I017210a0504b9c9ce7e0fc84ca63e0eae702077d

--- a/config.yaml
+++ b/config.yaml
@@ -37,10 +37,6 @@ options:
 
       NOTE: updating this setting to a source that is known to provide
       a later version of OpenStack will trigger a software upgrade.
-
-      NOTE: when openstack-origin-git is specified, openstack specific
-      packages will be installed from source rather than from the
-      openstack-origin repository.
   openstack-origin-git:
     default:
     type: string
@@ -50,8 +46,6 @@ options:
 
       The default Openstack release name may be one of the following, where
       the corresponding OpenStack github branch will be used:
-        * icehouse
-        * kilo
         * liberty
         * mitaka
         * master
@@ -75,9 +69,7 @@ options:
         - {name: neutron,
            repository: 'git://github.com/openstack/neutron',
            branch: master}
-
-      Note that the installed config files will be determined based on
-      the OpenStack release of the openstack-origin option.
+        release: master
   rabbit-user:
     default: neutron
     type: string
