Support to inject config-flags for neutron-api charm
This patch is just to enable adding custom options to
neutron.conf by the following command:

juju set neutron-api config-flags='key1=val1, ...'

Change-Id: I46bc32c250295a511508ced4cbca8f9748229415
Closes-Bug: #1585508

--- a/templates/kilo/neutron.conf
+++ b/templates/kilo/neutron.conf
@@ -72,6 +72,12 @@ nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 {% endfor -%}
 {% endif %}
 
+{% if user_config_flags -%}
+{% for key, value in user_config_flags.iteritems() -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif -%}
+
 {% include "section-zeromq" %}
 
 [quotas]
