--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -62,6 +62,12 @@ notify_nova_on_port_data_changes = True
 {% endfor -%}
 {% endif %}
 
+{% if user_config_flags -%}
+{% for key, value in user_config_flags.iteritems() -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif -%}
+
 {% include "section-zeromq" %}
 
 [quotas]
