--- a/templates/juno/neutron.conf
+++ b/templates/juno/neutron.conf
@@ -70,6 +70,12 @@ nova_admin_auth_url = {{ auth_protocol }}://{{ auth_host }}:{{ auth_port }}/v2.0
 {% endfor -%}
 {% endif %}
 
+{% if user_config_flags -%}
+{% for key, value in user_config_flags.iteritems() -%}
+{{ key }} = {{ value }}
+{% endfor -%}
+{% endif -%}
+
 [quotas]
 {% if quota_driver -%}
 quota_driver = {{ quota_driver }}
