--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -12,6 +12,7 @@ state_path = /var/lib/neutron
 bind_host = {{ bind_host }}
 auth_strategy = keystone
 notification_driver = neutron.openstack.common.notifier.rpc_notifier
+notification_topics = notifications,notifications_designate
 api_workers = {{ workers }}
 rpc_workers = {{ workers }}
 
