Add charm series data to metadata.yaml
This optimizes the publication process to the charm store, and
ensures that the charm code and version is consistent across all
supported Ubuntu series.

Change-Id: Icf74ed46a2e89506eef10ae6b9b9ca64f952b41c

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -18,6 +18,11 @@ extra-bindings:
   public:
   admin:
   internal:
+series:
+  - xenial
+  - trusty
+  - precise
+  - yakkety
 provides:
   nrpe-external-master:
     interface: nrpe-external-master
