Update amulet test definitions for Newton
- Remove Precise-Icehouse Amulet test definitions if they exist.

- Add Xenial-Newton Amulet test definitions.

- Add Yakkety-Newton Amulet test definitions.

- Use the percona-cluster charm in tests instead of the mysql charm.

Change-Id: Iea26519359a46450eb7f978c7a91b11f6d9b533a

--- a/config.yaml
+++ b/config.yaml
@@ -48,6 +48,7 @@ options:
       the corresponding OpenStack github branch will be used:
         * liberty
         * mitaka
+        * newton
         * master
 
       The YAML must minimally include the following repositories, and may
