Update Amulet defs, series metadata and c-h sync
- Sync charm helpers if applicable.

- Fix test executable hashbags for virtualenv prep.

- Add Yakkety-Newton Amulet test definitions.

- Prep Xenial-Ocata Amulet test definitions (not yet enabled).

- Prep Zesty-Ocata Amulet test definitions (not yet enabled).

- Add Zesty charm series metadata.

- Remove Precise charm series metadata if present.

- Remove Precise Amulet test definitions if present.

- Update amulet to remove Juno reference

Change-Id: I374593c6b19f8d5011b954d4725ecfe760450037

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,8 +20,8 @@ extra-bindings:
   internal:
 series:
   - xenial
+  - zesty
   - trusty
-  - precise
   - yakkety
 provides:
   nrpe-external-master:
