Add default-tenant-network-type config option
- Add default-tenant-network-type config option to allow the default
  network type for a tenant network to be set

- Fix rendering of overlay-network-type so that an empty string is
  valid

Change-Id: Ib2325d273a0dd5e637f36113b951130387902777
Closes-Bug: 1533651

--- a/config.yaml
+++ b/config.yaml
@@ -140,7 +140,8 @@ options:
         gre
         vxlan
       .
-      Multiple types can be provided - field is space delimited.
+      Multiple types can be provided - field is space delimited. To disable
+      overlay networks set to the empty string ''
   flat-network-providers:
     type: string
     default:
@@ -617,3 +618,8 @@ options:
       http://bugs.launchpad.net/charms providing an explanation of why the
       config was needed so that we may consider it for inclusion as a
       natively supported config in the the charm.
+  default-tenant-network-type:
+    type: string
+    default:
+    description: |
+      The default type for a tenant network e.g. vxlan, vlan, gre etc
