Add modern NSX support
TODO: Fix sub config options like dvs_id etc

Change-Id: I3735325c6b717395e4af7e1859de5b9895aa86d3

--- a/config.yaml
+++ b/config.yaml
@@ -450,6 +450,22 @@ options:
     default:
     description: |
       This is uuid of the default NSX L3 Gateway Service.
+  nsx-plugin:
+    type: string
+    default: NsxPlugin
+    description: |
+      There are currenlty four options for NSX plugins.
+       NsxDvsPlugin provides simple support for distributed switches
+       NsxPlugin provides support for multi-hypervisors
+       NsxVPlugin plugin for vSphere
+       NsxV3Plugin provides support for multi-hypervisors
+      https://wiki.openstack.org/wiki/Neutron/VMware_NSX_plugins
+      Used with >= Mitaka
+  nsx-dvs-id:
+    type: string
+    default:
+    description: |
+        For use with the NsxDVSPlugin. The DVS ID
   # end of NSX configuration
   nagios_context:
     default: "juju"
